test/pass/includes/31-open_include.perk
open "../31-open.perk"
import "stdio.h"

fun f (): void {
  printf("Hello from f!");
}