test/fail/03-missing_import.perk
fun main(): void {
    printf("This file is expected to fail due to a missing import.");
}